bip2ml/src/parser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
file' -> . file [ # ]
## Transitions:
-- On TYPE shift to state 1
-- On SPEC shift to state 31
-- On OPEN shift to state 32
-- On LET shift to state 34
-- On INCLUDE shift to state 297
-- On type_def shift to state 299
-- On spec shift to state 300
-- On list(decl) shift to state 301
-- On file shift to state 303
-- On def_outer shift to state 304
-- On decl shift to state 305
## Reductions:
-- On EOF
--   reduce production list(decl) ->

State 1:
## Known stack suffix:
## TYPE
## LR(1) items:
type_def -> TYPE . type_def_core [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On type_def_core shift to state 3
-- On ident shift to state 4
## Reductions:

State 2:
## Known stack suffix:
## IDENT
## LR(1) items:
ident -> IDENT . [ WITH UNIT TYPE TO TIMES THEN SPEC SEMICOLON RSQBR RP RFLOOR PREPEND PLUS PIPE OPEN MOD MINUS LP LOGICOR LOGICAND LET INCLUDE IN IDENT EQUAL EOF END DOT DONE DO DIV CONCAT_STR COMMA COLON CMP CASE AT_SYM ASSIGN ARROW AND ]
## Transitions:
## Reductions:
-- On WITH UNIT TYPE TO TIMES THEN SPEC SEMICOLON RSQBR RP RFLOOR PREPEND PLUS PIPE OPEN MOD MINUS LP LOGICOR LOGICAND LET INCLUDE IN IDENT EQUAL EOF END DOT DONE DO DIV CONCAT_STR COMMA COLON CMP CASE AT_SYM ASSIGN ARROW AND
--   reduce production ident -> IDENT

State 3:
## Known stack suffix:
## TYPE type_def_core
## LR(1) items:
type_def -> TYPE type_def_core . [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production type_def -> TYPE type_def_core

State 4:
## Known stack suffix:
## ident
## LR(1) items:
type_def_core -> ident . EQUAL payload option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
type_def_core -> ident . EQUAL CASE separated_nonempty_list(CASE,constructor) option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On EQUAL shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## ident EQUAL
## LR(1) items:
type_def_core -> ident EQUAL . payload option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
type_def_core -> ident EQUAL . CASE separated_nonempty_list(CASE,constructor) option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On CASE shift to state 9
-- On BOOL shift to state 18
-- On separated_nonempty_list(TIMES,payload_elem) shift to state 19
-- On payload_elem shift to state 20
-- On payload shift to state 29
-- On ident shift to state 23
-- On bip_type shift to state 24
## Reductions:

State 6:
## Known stack suffix:
## STRING
## LR(1) items:
bip_type -> STRING . [ TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND ]
## Transitions:
## Reductions:
-- On TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND
--   reduce production bip_type -> STRING

State 7:
## Known stack suffix:
## NONE
## LR(1) items:
bip_type -> NONE . [ TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND ]
## Transitions:
## Reductions:
-- On TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND
--   reduce production bip_type -> NONE

State 8:
## Known stack suffix:
## INT
## LR(1) items:
bip_type -> INT . [ TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND ]
## Transitions:
## Reductions:
-- On TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND
--   reduce production bip_type -> INT

State 9:
## Known stack suffix:
## ident EQUAL CASE
## LR(1) items:
type_def_core -> ident EQUAL CASE . separated_nonempty_list(CASE,constructor) option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On IDENT_CAP shift to state 10
-- On separated_nonempty_list(CASE,constructor) shift to state 11
-- On ident_cap shift to state 16
-- On constructor shift to state 26
## Reductions:

State 10:
## Known stack suffix:
## IDENT_CAP
## LR(1) items:
ident_cap -> IDENT_CAP . [ TYPE TO TIMES THEN SPEC SEMICOLON RSQBR RP RFLOOR PLUS PIPE OPEN OF MOD MINUS LP LOGICOR LOGICAND LET INCLUDE IN IDENT EQUAL EOF END DOT DONE DO DIV CONCAT_STR COMMA CMP CASE ARROW AND ]
## Transitions:
## Reductions:
-- On TYPE TO TIMES THEN SPEC SEMICOLON RSQBR RP RFLOOR PLUS PIPE OPEN OF MOD MINUS LP LOGICOR LOGICAND LET INCLUDE IN IDENT EQUAL EOF END DOT DONE DO DIV CONCAT_STR COMMA CMP CASE ARROW AND
--   reduce production ident_cap -> IDENT_CAP

State 11:
## Known stack suffix:
## ident EQUAL CASE separated_nonempty_list(CASE,constructor)
## LR(1) items:
type_def_core -> ident EQUAL CASE separated_nonempty_list(CASE,constructor) . option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On AND shift to state 12
-- On option(and_type_def) shift to state 14
-- On and_type_def shift to state 15
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production option(and_type_def) ->

State 12:
## Known stack suffix:
## AND
## LR(1) items:
and_type_def -> AND . type_def_core [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On type_def_core shift to state 13
-- On ident shift to state 4
## Reductions:

State 13:
## Known stack suffix:
## AND type_def_core
## LR(1) items:
and_type_def -> AND type_def_core . [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production and_type_def -> AND type_def_core

State 14:
## Known stack suffix:
## ident EQUAL CASE separated_nonempty_list(CASE,constructor) option(and_type_def)
## LR(1) items:
type_def_core -> ident EQUAL CASE separated_nonempty_list(CASE,constructor) option(and_type_def) . [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production type_def_core -> ident EQUAL CASE separated_nonempty_list(CASE,constructor) option(and_type_def)

State 15:
## Known stack suffix:
## and_type_def
## LR(1) items:
option(and_type_def) -> and_type_def . [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production option(and_type_def) -> and_type_def

State 16:
## Known stack suffix:
## ident_cap
## LR(1) items:
constructor -> ident_cap . OF payload [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
constructor -> ident_cap . [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
-- On OF shift to state 17
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production constructor -> ident_cap

State 17:
## Known stack suffix:
## ident_cap OF
## LR(1) items:
constructor -> ident_cap OF . payload [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On BOOL shift to state 18
-- On separated_nonempty_list(TIMES,payload_elem) shift to state 19
-- On payload_elem shift to state 20
-- On payload shift to state 25
-- On ident shift to state 23
-- On bip_type shift to state 24
## Reductions:

State 18:
## Known stack suffix:
## BOOL
## LR(1) items:
bip_type -> BOOL . [ TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND ]
## Transitions:
## Reductions:
-- On TYPE TIMES SPEC RP RFLOOR PIPE OPEN LET INCLUDE IDENT EQUAL EOF COMMA CASE AND
--   reduce production bip_type -> BOOL

State 19:
## Known stack suffix:
## separated_nonempty_list(TIMES,payload_elem)
## LR(1) items:
payload -> separated_nonempty_list(TIMES,payload_elem) . [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production payload -> separated_nonempty_list(TIMES,payload_elem)

State 20:
## Known stack suffix:
## payload_elem
## LR(1) items:
separated_nonempty_list(TIMES,payload_elem) -> payload_elem . [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
separated_nonempty_list(TIMES,payload_elem) -> payload_elem . TIMES separated_nonempty_list(TIMES,payload_elem) [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
-- On TIMES shift to state 21
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production separated_nonempty_list(TIMES,payload_elem) -> payload_elem

State 21:
## Known stack suffix:
## payload_elem TIMES
## LR(1) items:
separated_nonempty_list(TIMES,payload_elem) -> payload_elem TIMES . separated_nonempty_list(TIMES,payload_elem) [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On BOOL shift to state 18
-- On separated_nonempty_list(TIMES,payload_elem) shift to state 22
-- On payload_elem shift to state 20
-- On ident shift to state 23
-- On bip_type shift to state 24
## Reductions:

State 22:
## Known stack suffix:
## payload_elem TIMES separated_nonempty_list(TIMES,payload_elem)
## LR(1) items:
separated_nonempty_list(TIMES,payload_elem) -> payload_elem TIMES separated_nonempty_list(TIMES,payload_elem) . [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production separated_nonempty_list(TIMES,payload_elem) -> payload_elem TIMES separated_nonempty_list(TIMES,payload_elem)

State 23:
## Known stack suffix:
## ident
## LR(1) items:
payload_elem -> ident . [ TYPE TIMES SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
## Reductions:
-- On TYPE TIMES SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production payload_elem -> ident

State 24:
## Known stack suffix:
## bip_type
## LR(1) items:
payload_elem -> bip_type . [ TYPE TIMES SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
## Reductions:
-- On TYPE TIMES SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production payload_elem -> bip_type

State 25:
## Known stack suffix:
## ident_cap OF payload
## LR(1) items:
constructor -> ident_cap OF payload . [ TYPE SPEC OPEN LET INCLUDE EOF CASE AND ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF CASE AND
--   reduce production constructor -> ident_cap OF payload

State 26:
## Known stack suffix:
## constructor
## LR(1) items:
separated_nonempty_list(CASE,constructor) -> constructor . [ TYPE SPEC OPEN LET INCLUDE EOF AND ]
separated_nonempty_list(CASE,constructor) -> constructor . CASE separated_nonempty_list(CASE,constructor) [ TYPE SPEC OPEN LET INCLUDE EOF AND ]
## Transitions:
-- On CASE shift to state 27
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF AND
--   reduce production separated_nonempty_list(CASE,constructor) -> constructor

State 27:
## Known stack suffix:
## constructor CASE
## LR(1) items:
separated_nonempty_list(CASE,constructor) -> constructor CASE . separated_nonempty_list(CASE,constructor) [ TYPE SPEC OPEN LET INCLUDE EOF AND ]
## Transitions:
-- On IDENT_CAP shift to state 10
-- On separated_nonempty_list(CASE,constructor) shift to state 28
-- On ident_cap shift to state 16
-- On constructor shift to state 26
## Reductions:

State 28:
## Known stack suffix:
## constructor CASE separated_nonempty_list(CASE,constructor)
## LR(1) items:
separated_nonempty_list(CASE,constructor) -> constructor CASE separated_nonempty_list(CASE,constructor) . [ TYPE SPEC OPEN LET INCLUDE EOF AND ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF AND
--   reduce production separated_nonempty_list(CASE,constructor) -> constructor CASE separated_nonempty_list(CASE,constructor)

State 29:
## Known stack suffix:
## ident EQUAL payload
## LR(1) items:
type_def_core -> ident EQUAL payload . option(and_type_def) [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On AND shift to state 12
-- On option(and_type_def) shift to state 30
-- On and_type_def shift to state 15
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production option(and_type_def) ->

State 30:
## Known stack suffix:
## ident EQUAL payload option(and_type_def)
## LR(1) items:
type_def_core -> ident EQUAL payload option(and_type_def) . [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production type_def_core -> ident EQUAL payload option(and_type_def)

State 31:
## Known stack suffix:
## SPEC
## LR(1) items:
spec -> SPEC . [ WHILE UNIT TYPE SPEC REF OPEN NOT MINUS MATCH LSQBR LP LFLOOR LET INCLUDE IN IF IDENT_CAP IDENT FOR EOF DEREF CST ASSERT ]
## Transitions:
## Reductions:
-- On WHILE UNIT TYPE SPEC REF OPEN NOT MINUS MATCH LSQBR LP LFLOOR LET INCLUDE IN IF IDENT_CAP IDENT FOR EOF DEREF CST ASSERT
--   reduce production spec -> SPEC

State 32:
## Known stack suffix:
## OPEN
## LR(1) items:
decl -> OPEN . ident_cap [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On IDENT_CAP shift to state 10
-- On ident_cap shift to state 33
## Reductions:

State 33:
## Known stack suffix:
## OPEN ident_cap
## LR(1) items:
decl -> OPEN ident_cap . [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
## Reductions:
-- On TYPE SPEC OPEN LET INCLUDE EOF
--   reduce production decl -> OPEN ident_cap

State 34:
## Known stack suffix:
## LET
## LR(1) items:
def_outer -> LET . REC ident param_list option(fun_ret) EQUAL block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
def_outer -> LET . ident param_list option(fun_ret) EQUAL block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On REC shift to state 35
-- On IDENT shift to state 2
-- On ident shift to state 291
## Reductions:

State 35:
## Known stack suffix:
## LET REC
## LR(1) items:
def_outer -> LET REC . ident param_list option(fun_ret) EQUAL block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On IDENT shift to state 2
-- On ident shift to state 36
## Reductions:

State 36:
## Known stack suffix:
## LET REC ident
## LR(1) items:
def_outer -> LET REC ident . param_list option(fun_ret) EQUAL block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On UNIT shift to state 37
-- On LP shift to state 38
-- On param_list shift to state 58
## Reductions:

State 37:
## Known stack suffix:
## UNIT
## LR(1) items:
param_list -> UNIT . [ EQUAL COLON ]
## Transitions:
## Reductions:
-- On EQUAL COLON
--   reduce production param_list -> UNIT

State 38:
## Known stack suffix:
## LP
## LR(1) items:
param_list -> LP . loption(separated_nonempty_list(COMMA,parameter)) RP [ EQUAL COLON ]
## Transitions:
-- On LFLOOR shift to state 39
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,parameter) shift to state 49
-- On parameter_core shift to state 50
-- On parameter shift to state 53
-- On loption(separated_nonempty_list(COMMA,parameter)) shift to state 56
-- On ident shift to state 42
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,parameter)) ->

State 39:
## Known stack suffix:
## LFLOOR
## LR(1) items:
parameter -> LFLOOR . parameter_core RFLOOR [ RP COMMA ]
## Transitions:
-- On IDENT shift to state 2
-- On parameter_core shift to state 40
-- On ident shift to state 42
## Reductions:

State 40:
## Known stack suffix:
## LFLOOR parameter_core
## LR(1) items:
parameter -> LFLOOR parameter_core . RFLOOR [ RP COMMA ]
## Transitions:
-- On RFLOOR shift to state 41
## Reductions:

State 41:
## Known stack suffix:
## LFLOOR parameter_core RFLOOR
## LR(1) items:
parameter -> LFLOOR parameter_core RFLOOR . [ RP COMMA ]
## Transitions:
## Reductions:
-- On RP COMMA
--   reduce production parameter -> LFLOOR parameter_core RFLOOR

State 42:
## Known stack suffix:
## ident
## LR(1) items:
parameter_core -> ident . [ RP RFLOOR PIPE COMMA ]
parameter_core -> ident . COLON any_type option(ident) [ RP RFLOOR PIPE COMMA ]
## Transitions:
-- On COLON shift to state 43
## Reductions:
-- On RP RFLOOR PIPE COMMA
--   reduce production parameter_core -> ident

State 43:
## Known stack suffix:
## ident COLON
## LR(1) items:
parameter_core -> ident COLON . any_type option(ident) [ RP RFLOOR PIPE COMMA ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On BOOL shift to state 18
-- On ident shift to state 44
-- On bip_type shift to state 45
-- On any_type shift to state 46
## Reductions:

State 44:
## Known stack suffix:
## ident
## LR(1) items:
any_type -> ident . [ RP RFLOOR PIPE IDENT COMMA ]
## Transitions:
## Reductions:
-- On RP RFLOOR PIPE IDENT COMMA
--   reduce production any_type -> ident

State 45:
## Known stack suffix:
## bip_type
## LR(1) items:
any_type -> bip_type . [ RP RFLOOR PIPE IDENT COMMA ]
## Transitions:
## Reductions:
-- On RP RFLOOR PIPE IDENT COMMA
--   reduce production any_type -> bip_type

State 46:
## Known stack suffix:
## ident COLON any_type
## LR(1) items:
parameter_core -> ident COLON any_type . option(ident) [ RP RFLOOR PIPE COMMA ]
## Transitions:
-- On IDENT shift to state 2
-- On option(ident) shift to state 47
-- On ident shift to state 48
## Reductions:
-- On RP RFLOOR PIPE COMMA
--   reduce production option(ident) ->

State 47:
## Known stack suffix:
## ident COLON any_type option(ident)
## LR(1) items:
parameter_core -> ident COLON any_type option(ident) . [ RP RFLOOR PIPE COMMA ]
## Transitions:
## Reductions:
-- On RP RFLOOR PIPE COMMA
--   reduce production parameter_core -> ident COLON any_type option(ident)

State 48:
## Known stack suffix:
## ident
## LR(1) items:
option(ident) -> ident . [ RP RFLOOR PIPE EQUAL COMMA ]
## Transitions:
## Reductions:
-- On RP RFLOOR PIPE EQUAL COMMA
--   reduce production option(ident) -> ident

State 49:
## Known stack suffix:
## separated_nonempty_list(COMMA,parameter)
## LR(1) items:
loption(separated_nonempty_list(COMMA,parameter)) -> separated_nonempty_list(COMMA,parameter) . [ RP ]
## Transitions:
## Reductions:
-- On RP
--   reduce production loption(separated_nonempty_list(COMMA,parameter)) -> separated_nonempty_list(COMMA,parameter)

State 50:
## Known stack suffix:
## parameter_core
## LR(1) items:
parameter -> parameter_core . [ RP COMMA ]
parameter -> parameter_core . PIPE parameter_core [ RP COMMA ]
## Transitions:
-- On PIPE shift to state 51
## Reductions:
-- On RP COMMA
--   reduce production parameter -> parameter_core

State 51:
## Known stack suffix:
## parameter_core PIPE
## LR(1) items:
parameter -> parameter_core PIPE . parameter_core [ RP COMMA ]
## Transitions:
-- On IDENT shift to state 2
-- On parameter_core shift to state 52
-- On ident shift to state 42
## Reductions:

State 52:
## Known stack suffix:
## parameter_core PIPE parameter_core
## LR(1) items:
parameter -> parameter_core PIPE parameter_core . [ RP COMMA ]
## Transitions:
## Reductions:
-- On RP COMMA
--   reduce production parameter -> parameter_core PIPE parameter_core

State 53:
## Known stack suffix:
## parameter
## LR(1) items:
separated_nonempty_list(COMMA,parameter) -> parameter . [ RP ]
separated_nonempty_list(COMMA,parameter) -> parameter . COMMA separated_nonempty_list(COMMA,parameter) [ RP ]
## Transitions:
-- On COMMA shift to state 54
## Reductions:
-- On RP
--   reduce production separated_nonempty_list(COMMA,parameter) -> parameter

State 54:
## Known stack suffix:
## parameter COMMA
## LR(1) items:
separated_nonempty_list(COMMA,parameter) -> parameter COMMA . separated_nonempty_list(COMMA,parameter) [ RP ]
## Transitions:
-- On LFLOOR shift to state 39
-- On IDENT shift to state 2
-- On separated_nonempty_list(COMMA,parameter) shift to state 55
-- On parameter_core shift to state 50
-- On parameter shift to state 53
-- On ident shift to state 42
## Reductions:

State 55:
## Known stack suffix:
## parameter COMMA separated_nonempty_list(COMMA,parameter)
## LR(1) items:
separated_nonempty_list(COMMA,parameter) -> parameter COMMA separated_nonempty_list(COMMA,parameter) . [ RP ]
## Transitions:
## Reductions:
-- On RP
--   reduce production separated_nonempty_list(COMMA,parameter) -> parameter COMMA separated_nonempty_list(COMMA,parameter)

State 56:
## Known stack suffix:
## LP loption(separated_nonempty_list(COMMA,parameter))
## LR(1) items:
param_list -> LP loption(separated_nonempty_list(COMMA,parameter)) . RP [ EQUAL COLON ]
## Transitions:
-- On RP shift to state 57
## Reductions:

State 57:
## Known stack suffix:
## LP loption(separated_nonempty_list(COMMA,parameter)) RP
## LR(1) items:
param_list -> LP loption(separated_nonempty_list(COMMA,parameter)) RP . [ EQUAL COLON ]
## Transitions:
## Reductions:
-- On EQUAL COLON
--   reduce production param_list -> LP loption(separated_nonempty_list(COMMA,parameter)) RP

State 58:
## Known stack suffix:
## LET REC ident param_list
## LR(1) items:
def_outer -> LET REC ident param_list . option(fun_ret) EQUAL block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On COLON shift to state 59
-- On option(fun_ret) shift to state 70
-- On fun_ret shift to state 221
## Reductions:
-- On EQUAL
--   reduce production option(fun_ret) ->

State 59:
## Known stack suffix:
## COLON
## LR(1) items:
fun_ret -> COLON . ret_type [ EQUAL ]
fun_ret -> COLON . LFLOOR ret_type RFLOOR [ EQUAL ]
fun_ret -> COLON . ret_type PIPE ret_type [ EQUAL ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On LFLOOR shift to state 60
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On BOOL shift to state 18
-- On ret_type shift to state 67
-- On ident shift to state 63
-- On bip_type shift to state 65
## Reductions:

State 60:
## Known stack suffix:
## COLON LFLOOR
## LR(1) items:
fun_ret -> COLON LFLOOR . ret_type RFLOOR [ EQUAL ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On BOOL shift to state 18
-- On ret_type shift to state 61
-- On ident shift to state 63
-- On bip_type shift to state 65
## Reductions:

State 61:
## Known stack suffix:
## COLON LFLOOR ret_type
## LR(1) items:
fun_ret -> COLON LFLOOR ret_type . RFLOOR [ EQUAL ]
## Transitions:
-- On RFLOOR shift to state 62
## Reductions:

State 62:
## Known stack suffix:
## COLON LFLOOR ret_type RFLOOR
## LR(1) items:
fun_ret -> COLON LFLOOR ret_type RFLOOR . [ EQUAL ]
## Transitions:
## Reductions:
-- On EQUAL
--   reduce production fun_ret -> COLON LFLOOR ret_type RFLOOR

State 63:
## Known stack suffix:
## ident
## LR(1) items:
ret_type -> ident . option(ident) [ RFLOOR PIPE EQUAL ]
## Transitions:
-- On IDENT shift to state 2
-- On option(ident) shift to state 64
-- On ident shift to state 48
## Reductions:
-- On RFLOOR PIPE EQUAL
--   reduce production option(ident) ->

State 64:
## Known stack suffix:
## ident option(ident)
## LR(1) items:
ret_type -> ident option(ident) . [ RFLOOR PIPE EQUAL ]
## Transitions:
## Reductions:
-- On RFLOOR PIPE EQUAL
--   reduce production ret_type -> ident option(ident)

State 65:
## Known stack suffix:
## bip_type
## LR(1) items:
ret_type -> bip_type . option(ident) [ RFLOOR PIPE EQUAL ]
## Transitions:
-- On IDENT shift to state 2
-- On option(ident) shift to state 66
-- On ident shift to state 48
## Reductions:
-- On RFLOOR PIPE EQUAL
--   reduce production option(ident) ->

State 66:
## Known stack suffix:
## bip_type option(ident)
## LR(1) items:
ret_type -> bip_type option(ident) . [ RFLOOR PIPE EQUAL ]
## Transitions:
## Reductions:
-- On RFLOOR PIPE EQUAL
--   reduce production ret_type -> bip_type option(ident)

State 67:
## Known stack suffix:
## COLON ret_type
## LR(1) items:
fun_ret -> COLON ret_type . [ EQUAL ]
fun_ret -> COLON ret_type . PIPE ret_type [ EQUAL ]
## Transitions:
-- On PIPE shift to state 68
## Reductions:
-- On EQUAL
--   reduce production fun_ret -> COLON ret_type

State 68:
## Known stack suffix:
## COLON ret_type PIPE
## LR(1) items:
fun_ret -> COLON ret_type PIPE . ret_type [ EQUAL ]
## Transitions:
-- On STRING shift to state 6
-- On NONE shift to state 7
-- On INT shift to state 8
-- On IDENT shift to state 2
-- On BOOL shift to state 18
-- On ret_type shift to state 69
-- On ident shift to state 63
-- On bip_type shift to state 65
## Reductions:

State 69:
## Known stack suffix:
## COLON ret_type PIPE ret_type
## LR(1) items:
fun_ret -> COLON ret_type PIPE ret_type . [ EQUAL ]
## Transitions:
## Reductions:
-- On EQUAL
--   reduce production fun_ret -> COLON ret_type PIPE ret_type

State 70:
## Known stack suffix:
## LET REC ident param_list option(fun_ret)
## LR(1) items:
def_outer -> LET REC ident param_list option(fun_ret) . EQUAL block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On EQUAL shift to state 71
## Reductions:

State 71:
## Known stack suffix:
## LET REC ident param_list option(fun_ret) EQUAL
## LR(1) items:
def_outer -> LET REC ident param_list option(fun_ret) EQUAL . block spec [ TYPE SPEC OPEN LET INCLUDE EOF ]
## Transitions:
-- On BEGIN shift to state 72
-- On block shift to state 289
## Reductions:

State 72:
## Known stack suffix:
## BEGIN
## LR(1) items:
block -> BEGIN . block_core END [ TO TIMES THEN SPEC SEMICOLON RSQBR RP RFLOOR PLUS PIPE MOD MINUS LOGICOR LOGICAND IN EQUAL END ELSE DOT DONE DO DIV CONCAT_STR COMMA CMP CASE ]
## Transitions:
-- On WHILE shift to state 73
-- On UNIT shift to state 74
-- On REF shift to state 75
-- On NOT shift to state 76
-- On MINUS shift to state 77
-- On MATCH shift to state 78
-- On LSQBR shift to state 102
-- On LP shift to state 103
-- On LFLOOR shift to state 104
-- On LET shift to state 105
-- On IF shift to state 114
-- On IDENT_CAP shift to state 10
-- On IDENT shift to state 2
-- On FOR shift to state 115
-- On DEREF shift to state 118
-- On CST shift to state 119
-- On ASSERT shift to state 121
-- On two_plus_tuple shift to state 123
-- On prepend_seq shift to state 124
-- On prepend_elem shift to state 127
-- On list_std shift to state 130
-- On list_def shift to state 131
-- On ident_cap shift to state 140
-- On ident shift to state 150
-- On expr shift to state 210
-- On def_inner shift to state 156
-- On block_core shift to state 287
## Reductions:

State 73:
## Known stack suffix:
## WHILE
## LR(1) items:
expr -> WHILE . expr DO option(spec) block_core DONE [ TO TIMES THEN SEMICOLON RSQBR RP RFLOOR PLUS PIPE MOD MINUS LOGICOR LOGICAND IN EQUAL END DOT DONE DO DIV CONCAT_STR COMMA CMP CASE ]
expr -> WHILE . expr PIPE expr DOT expr PIPE expr DO option(spec) block_core DONE [ TO TIMES THEN SEMICOLON RSQBR RP RFLOOR PLUS PIPE MOD MINUS LOGICOR LOGICAND IN EQUAL END DOT DONE DO DIV CONCAT_STR COMMA CMP CASE ]
## Transitions:
-- On WHILE shift to state 73
-- On UNIT shift to state 74
-- On REF shift to state 75
-- On NOT shift to state 76
-- On MINUS shift to state 77
-- On MATCH shift to state 78
-- On LSQBR shift to state 102
-- On LP shift to state 103
-- On LFLOOR shift to state 104
-- On LET shift to state 105
-- On IF shift to state 114
-- On IDENT_CAP shift to state 10
-- On IDENT shift to state 2
-- On FOR shift to state 115
-- On DEREF shift to state 118
-- On CST shift to state 119
-- On ASSERT shift to state 121
-- On two_plus_tuple shift to state 123
-- On prepend_seq shift to state 124
-- On prepend_elem shift to state 127
-- On list_std shift to state 130
-- On list_def shift to state 131
-- On ident_cap shift to state 140
-- On ident shift to state 150
-- On expr shift to state 272
-- On def_inner shift to state 156
## Reductions:

State 74:
## Known stack suffix:
## UNIT
## LR(1) items:
expr -> UNIT . [ TO TIMES THEN SEMICOLON RSQBR RP RFLOOR PLUS PIPE MOD MINUS LOGICOR LOGICAND IN EQUAL END DOT DONE DO DIV CONCAT_STR COMMA CMP CASE ]
## Transitions:
## Reductions:
-- On TO TIMES THEN SEMICOLON RSQBR RP RFLOOR PLUS PIPE MOD MINUS LOGICOR LOGICAND IN EQUAL END DOT DONE DO DIV CONCAT_STR COMMA CMP CASE
--   reduce production expr -> UNIT
